lint found some more directional quotes

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -373,7 +373,7 @@
     <string name="lbl_date_published_year">Année de parution</string>
     <string name="lbl_publisher">Éditeur</string>
     <string name="lbl_publishers">Éditeurs</string>
-    <string name="pe_ui_context_menu_mode_by_size">Les écrans plus petits affichent des menus longs en bas de l\'écran et des menus courts sous la forme de menus contextuels classiques.\nLes écrans plus grands, tels que les tablettes, utilisent toujours des menus contextuels classiques.</string>
+    <string name="pe_ui_context_menu_mode_by_size">Les écrans plus petits affichent des menus longs en bas de l’écran et des menus courts sous la forme de menus contextuels classiques.\nLes écrans plus grands, tels que les tablettes, utilisent toujours des menus contextuels classiques.</string>
     <string name="option_purge_files">Nettoyer les fichiers</string>
     <string name="option_purge_image_cache">Effacer le cache des images</string>
     <string name="lbl_rating">Appreciation</string>
@@ -410,7 +410,7 @@
     <string name="option_isbn_strict">ISBN strict</string>
     <string name="lbl_style">Style</string>
     <string name="lbl_styles">Les styles</string>
-    <string name="lbl_styles_long">Style d\'une bibliothèque</string>
+    <string name="lbl_styles_long">Style d’une bibliothèque</string>
     <string name="lbl_sync_date">Depuis</string>
     <string name="lbl_tab_alternative_editions">Éd. alt.</string>
     <string name="lbl_tab_details">Détails</string>
@@ -538,7 +538,7 @@
     <string name="pt_bob_books_under_multiple_series">Livres appartenant à des séries multiples</string>
     <string name="pt_bob_cover_long_click">Ouvrir le menu contextuel du livre.</string>
     <string name="pe_bob_cover_long_click_ignore">Avec un bouton.</string>
-    <string name="pe_bob_cover_long_click_popupmenu">Par un clic long sur l\'image de couverture.</string>
+    <string name="pe_bob_cover_long_click_popupmenu">Par un clic long sur l’image de couverture.</string>
     <string name="pt_bob_cover_scale">Taille de couverture</string>
     <string name="pt_bob_cover_show">Montrer les couvertures</string>
     <string name="pt_bob_font_size">Taille de la police</string>
@@ -771,18 +771,18 @@
     <string name="error_total_pages_must_be_larger_than_current_page">Doit être supérieur ou égal à la page actuelle</string>
     <string name="info_builtin_style_asterix">(* styles par défaut)</string>
     <string name="pt_dialog_and_menu_popup_tuning">Dialogues et menus</string>
-    <string name="pe_option_bottom_sheet">Toujours en bas de l\'écran</string>
+    <string name="pe_option_bottom_sheet">Toujours en bas de l’écran</string>
     <string name="pt_ui_dialogs_mode">Dialogues</string>
     <string name="pe_ui_dialog_mode_classic">Toujours sous forme de boîte de dialogue classique</string>
-    <string name="pe_ui_dialog_mode_by_screen_size">Les écrans plus petits affichent les boîtes de dialogue en bas de l\'écran.\nLes écrans plus grands, tels que les tablettes, utilisent toujours les boîtes de dialogue classiques.</string>
+    <string name="pe_ui_dialog_mode_by_screen_size">Les écrans plus petits affichent les boîtes de dialogue en bas de l’écran.\nLes écrans plus grands, tels que les tablettes, utilisent toujours les boîtes de dialogue classiques.</string>
     <string name="pc_context_menus">Menu contextuel et menu de ligne</string>
     <string name="pe_ui_context_menu_mode_classic">Toujours comme un menu contextuel classique</string>
     <string name="lbl_troubleshooting">Dépannage</string>
     <string name="pt_enable_extra_logging">Activer la journalisation supplémentaire</string>
-    <string name="lbl_troubleshooting_warning">N\'activez pas les options ci-dessous à moins que le développeur de l\'application ne vous le demande explicitement.</string>
+    <string name="lbl_troubleshooting_warning">N’activez pas les options ci-dessous à moins que le développeur de l’application ne vous le demande explicitement.</string>
     <string name="info_tap_to_select">Appuyez pour sélectionner.</string>
     <string name="lbl_tab_alternative_editions_long">Éditions alternatives</string>
-    <string name="warning_restart_required">Redémarrage de l\'application nécessaire</string>
+    <string name="warning_restart_required">Redémarrage de l’application nécessaire</string>
     <string name="pt_ui_theme_colors">Couleurs du thème</string>
     <string name="pe_ui_theme_colors_blue_grey">Bleu-gris</string>
     <string name="pe_ui_theme_colors_dynamic">Couleurs dynamiques</string>
