--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -494,7 +494,7 @@
     <string name="option_level_reset">Voorkeur expansieniveau</string>
     <string name="option_moving_covers_from_x_to_y">Verplaats alle covers van „%1$s” naar „%2$s”</string>
     <string name="option_purge_bedetheque_authors_cache">Wis de cache van Bedetheque Authors</string>
-    <string name="pe_ui_context_menu_mode_by_size">Kleinere schermen geven lange menu\'s weer onderaan het scherm en korte menu\'s als klassieke contextmenu\'s.\nGrotere schermen, zoals tablets, gebruiken altijd klassieke contextmenu\'s.</string>
+    <string name="pe_ui_context_menu_mode_by_size">Kleinere schermen geven lange menu\'s weer onderaan het scherm en korte menu\'s als klassieke contextmenu\'s.\nGrotere schermen, zoals tablets, gebruiken altijd klassieke contextmenu’s.</string>
     <string name="option_purge_files">Bestanden opschonen</string>
     <string name="option_purge_image_cache">Afbeeldingen cache wissen</string>
     <string name="option_rebuild_fts">Volledige tekst zoekgegevens opnieuw opbouwen</string>
@@ -763,16 +763,16 @@
     <string name="info_progress_x_percent">%1$d%% gelezen</string>
     <string name="info_progress_page_x_of_y">Pagina: %1$d van %2$d</string>
     <string name="lbl_track_progress_long">Volg je vooruitgang</string>
-    <string name="lbl_total_pages">Aantal pagina\'s</string>
+    <string name="lbl_total_pages">Aantal pagina’s</string>
     <string name="lbl_track_progress">Vooruitgang</string>
     <string name="error_total_pages_must_be_larger_than_current_page">Moet groter of gelijk zijn aan de huidige pagina</string>
     <string name="info_builtin_style_asterix">(* standaard stijlen)</string>
-    <string name="pt_dialog_and_menu_popup_tuning">Dialogen en menu\'s</string>
+    <string name="pt_dialog_and_menu_popup_tuning">Dialogen en menu’s</string>
     <string name="pe_option_bottom_sheet">Altijd onderaan het scherm</string>
     <string name="pt_ui_dialogs_mode">Dialogen</string>
     <string name="pe_ui_dialog_mode_classic">Altijd als een klassiek dialoogvenster</string>
     <string name="pe_ui_dialog_mode_by_screen_size">Kleinere schermen geven de dialoogvensters onderaan het scherm weer.\nGrote schermen, zoals tablets, gebruiken altijd klassieke dialoogvensters.</string>
-    <string name="pc_context_menus">Context- en rijmenu\'s</string>
+    <string name="pc_context_menus">Context- en rijmenu’s</string>
     <string name="pe_ui_context_menu_mode_classic">Altijd als een klassiek contextmenu</string>
     <string name="lbl_troubleshooting">Problemen oplossen</string>
     <string name="pt_enable_extra_logging">Extra logging inschakelen</string>
