--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -776,7 +776,7 @@
     <string name="lbl_percentage">Процент</string>
     <string name="lbl_current_page">Текущая страница</string>
     <string name="btn_completed">Завершено</string>
-    <string name="ps_use_read_progress_off">Используйте простой статус \"Прочитано/Не прочитано\".</string>
+    <string name="ps_use_read_progress_off">Используйте простой статус «Прочитано/Не прочитано».</string>
     <string name="ps_use_read_progress_on">Отслеживайте прогресс в процентах или по номеру страницы.</string>
     <string name="info_progress_x_percent">%1$d%% читать</string>
     <string name="info_progress_page_x_of_y">Страница: %1$d из %2$d</string>
