--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1089,7 +1089,7 @@
          Use the book title as given IN ENGLISH.
 
          -->
-    <string name="ps_show_titles_reordered_off">Chỉ áp dụng cho các ngôn ngữ sử dụng mạo từ. Ví dụ tiếng Anh: \"The Lord of The Rings\"</string>
+    <string name="ps_show_titles_reordered_off">Chỉ áp dụng cho các ngôn ngữ sử dụng mạo từ. Ví dụ tiếng Anh: “The Lord of The Rings”</string>
     <!--
         TRANSLATORS: FIRST READ the information for the string "pv_reformat_titles_prefixes".
 
