--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1822,4 +1822,9 @@
     <string name="pe_search_result_order_most_recent">Most recent book found</string>
     <string name="pe_search_result_order_first_found">First book found</string>
 
+
+    <string name="info_bulk_set_bookshelves">Select the bookshelves you want to assign to all books listed under the selected node.</string>
+    <string name="info_bulk_set_bookshelves_bs">You will be prompted to confirm or cancel before the assignment is done.</string>
+    <string name="confirm_assign_bookshelves">Please confirm that you want to assign the below list of bookshelves to all books listed under the selected node.\n\n%1$s</string>
+
 </resources>
