--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -679,6 +679,8 @@
     <string name="whichSendApplication">Κοινοποίηση</string>
     <string name="whichViewApplication">Άνοιγμα με</string>
     <string name="x_of_y">%1$d από %2$d</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Ακύρωση</string>
     <string name="yes">Ναι</string>
     <string name="info_story_in_single_book">Το «%1$s» υπάρχει σε ένα μόνο βιβλίο:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Εισαγάγετε ένα αρχείο κειμένου με αριθμούς ISBN. Το αρχείο θα πρέπει να έχει ένα μόνο ISBN σε κάθε γραμμή. Τα αποτελέσματα θα τοποθετηθούν στην ουρά.</string>
@@ -788,4 +790,5 @@
     <string name="pe_search_result_order_most_recent">Βρέθηκε το πιο πρόσφατο βιβλίο</string>
     <string name="pe_search_result_order_first_found">Πρώτο βιβλίο που βρέθηκε</string>
     <string name="info_bulk_set_bookshelves">Επιλέξτε τις βιβλιοθήκες που θέλετε να αντιστοιχίσετε σε όλα τα βιβλία που αναφέρονται στον επιλεγμένο κόμβο.</string>
+    <string name="dialog_alert_title">Προσοχή</string>
 </resources>
