--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -692,6 +692,7 @@
     <string name="whichSendApplication">Compartir</string>
     <string name="whichViewApplication">Abrir con</string>
     <string name="x_of_y">%1$d de %2$d</string>
+    <string name="cancel">Cancelar</string>
     <string name="yes">Sí</string>
     <string name="info_story_in_single_book">«%1$s» está presente en un solo libro:\n\n%2$s</string>
     <string name="tip_import_isbn_list">Importa un archivo de texto con números ISBN. El archivo debe tener un solo ISBN en cada línea. Los resultados se colocarán en la cola.</string>
@@ -803,4 +804,6 @@
     <string name="info_bulk_set_bookshelves">Seleccione las estanterías que desea asignar a todos los libros listados en el nodo seleccionado.</string>
     <string name="info_bulk_set_bookshelves_bs">Se le pedirá que confirme o cancele antes de que se realice la tarea.</string>
     <string name="confirm_assign_bookshelves"><![CDATA[Por favor, confirme que desea asignar la siguiente lista de estanterías a todos los libros listados en el nodo seleccionado.<br><br>%1$s]]></string>
+    <string name="ok">Aceptar</string>
+    <string name="dialog_alert_title">Atención</string>
 </resources>
