--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1385,6 +1385,8 @@
     <!-- endregion -->
     <!-- region ========== Single words used for multiple purposes. -->
     <!-- [VERIFIED] -->
+    <string name="ok">OK</string>
+    <string name="cancel">Hủy</string>
     <string name="yes">Có</string>
     <!-- [VERIFIED] -->
     <string name="no">Không</string>
@@ -1530,4 +1532,5 @@
     <string name="pe_search_result_order_first_found">Cuốn sách đầu tiên được tìm thấy</string>
     <string name="anonymous_author">[Vô danh]</string>
     <string name="info_bulk_set_bookshelves">Chọn giá sách bạn muốn gán cho tất cả sách được liệt kê trong nút đã chọn.</string>
+    <string name="dialog_alert_title">Chú ý</string>
 </resources>
