--- a/app/src/main/res/values-fo/strings.xml
+++ b/app/src/main/res/values-fo/strings.xml
@@ -84,7 +84,7 @@
     <string name="option_author_works_book">Bara bøkur</string>
     <string name="option_shop_books_by_author">Bøkur av hesum rithøvundi</string>
     <string name="option_shop_books_by_author_in_series">Bøkur eftir rithøvundi/rað</string>
-    <string name="and_others_plus">%1$s … <small>[+%2$d]</small></string>
+    <string name="and_others_plus"><![CDATA[%1$s … <small>[+%2$d]</small>]]></string>
     <string name="name_hash_nr">%1$s #%2$d</string>
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d bók</item>
