--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -52,7 +52,7 @@
     <string name="list_element">• %s</string>
     <string name="name_hash_nr">%1$s #%2$d</string>
     <string name="and_others">%1$s…</string>
-    <string name="and_others_plus">%1$s… <small>[+%2$d]</small></string>
+    <string name="and_others_plus"><![CDATA[%1$s … <small>[+%2$d]</small>]]></string>
     <string name="notification_channel_error">錯誤</string>
     <string name="debug_select_items">選擇你想要包含的內容：</string>
     <string name="acra_dialog_message">&APP_NAME; 似乎已崩潰。點擊「%1$s」將報告儲存至你選擇的位置。你可以使用此報告在專案網站上報告新問題。</string>
